--- a/AmazonProjet/src/main/webapp/WEB-INF/web.xml
+++ b/AmazonProjet/src/main/webapp/WEB-INF/web.xml
@@ -1,23 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
- http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <servlet>
-    <servlet-name>amazon</servlet-name>
+    <servlet-name>nozama</servlet-name>
     <servlet-class>
       org.springframework.web.servlet.DispatcherServlet
     </servlet-class>
     <load-on-startup>2</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>amazon</servlet-name>
+    <servlet-name>nozama</servlet-name>
     <url-pattern>/</url-pattern>
-    
   </servlet-mapping>
-    <session-config>
-    <session-timeout>
-      30
-    </session-timeout>
-    </session-config>
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
 </web-app>
